deployment/ingress/main-ingress-two.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress-two
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /apii/auth(/|$)(.*)
        backend:
          serviceName: alcatraz-auth
          servicePort: 80
      - path: /apii/accounts(/|$)(.*)
        backend:
          serviceName: alcatraz-provider
          servicePort: 80
